// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard matches snapshot with no accounts 1`] = `
"<Provider store={{...}}>
  <Connect(WithStyles(DashboardComponent))>
    <WithStyles(DashboardComponent) settings={{...}} accounts={{...}} formatCurrency={[Function]} totalBalance={0} dispatch={[Function]}>
      <DashboardComponent classes={{...}} settings={{...}} accounts={{...}} formatCurrency={[Function]} totalBalance={0} dispatch={[Function]}>
        <WithStyles(ForwardRef(Grid)) container={true}>
          <ForwardRef(Grid) classes={{...}} container={true}>
            <div className=\\"MuiGrid-root MuiGrid-container\\">
              <WithStyles(ForwardRef(Grid)) container={true} justify=\\"flex-end\\" className={[undefined]}>
                <ForwardRef(Grid) classes={{...}} container={true} justify=\\"flex-end\\" className={[undefined]}>
                  <div className=\\"MuiGrid-root MuiGrid-container MuiGrid-justify-xs-flex-end\\">
                    <WithStyles(ForwardRef(Paper)) className=\\"DashboardComponent-balancePaper-1\\">
                      <ForwardRef(Paper) classes={{...}} className=\\"DashboardComponent-balancePaper-1\\">
                        <div className=\\"MuiPaper-root MuiPaper-elevation1 DashboardComponent-balancePaper-1 MuiPaper-rounded\\">
                          <WithStyles(ForwardRef(Typography)) variant=\\"body1\\" color=\\"textSecondary\\" align=\\"right\\">
                            <ForwardRef(Typography) classes={{...}} variant=\\"body1\\" color=\\"textSecondary\\" align=\\"right\\" theme={{...}}>
                              <p className=\\"MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-alignRight\\">
                                Balance
                              </p>
                            </ForwardRef(Typography)>
                          </WithStyles(ForwardRef(Typography))>
                          <WithStyles(ForwardRef(Typography)) variant=\\"h5\\" align=\\"right\\" className=\\"DashboardComponent-balanceAmount-2\\">
                            <ForwardRef(Typography) classes={{...}} variant=\\"h5\\" align=\\"right\\" className=\\"DashboardComponent-balanceAmount-2\\" theme={{...}}>
                              <h5 className=\\"MuiTypography-root DashboardComponent-balanceAmount-2 MuiTypography-h5 MuiTypography-alignRight\\">
                                $0.00
                              </h5>
                            </ForwardRef(Typography)>
                          </WithStyles(ForwardRef(Typography))>
                          <WithStyles(ForwardRef(Paper)) className=\\"DashboardComponent-balancePaperIcon-3\\">
                            <ForwardRef(Paper) classes={{...}} className=\\"DashboardComponent-balancePaperIcon-3\\">
                              <div className=\\"MuiPaper-root MuiPaper-elevation1 DashboardComponent-balancePaperIcon-3 MuiPaper-rounded\\">
                                <ForwardRef className=\\"DashboardComponent-balanceIcon-4\\">
                                  <WithStyles(ForwardRef(SvgIcon)) className=\\"DashboardComponent-balanceIcon-4\\">
                                    <ForwardRef(SvgIcon) classes={{...}} className=\\"DashboardComponent-balanceIcon-4\\">
                                      <svg className=\\"MuiSvgIcon-root DashboardComponent-balanceIcon-4\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden=\\"true\\" role=\\"presentation\\">
                                        <path d=\\"M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z\\" />
                                      </svg>
                                    </ForwardRef(SvgIcon)>
                                  </WithStyles(ForwardRef(SvgIcon))>
                                </ForwardRef>
                              </div>
                            </ForwardRef(Paper)>
                          </WithStyles(ForwardRef(Paper))>
                        </div>
                      </ForwardRef(Paper)>
                    </WithStyles(ForwardRef(Paper))>
                  </div>
                </ForwardRef(Grid)>
              </WithStyles(ForwardRef(Grid))>
              <WithStyles(ForwardRef(Grid)) container={true}>
                <ForwardRef(Grid) classes={{...}} container={true}>
                  <div className=\\"MuiGrid-root MuiGrid-container\\">
                    <WithStyles(ForwardRef(Paper)) className=\\"DashboardComponent-summaryPaper-5\\">
                      <ForwardRef(Paper) classes={{...}} className=\\"DashboardComponent-summaryPaper-5\\">
                        <div className=\\"MuiPaper-root MuiPaper-elevation1 DashboardComponent-summaryPaper-5 MuiPaper-rounded\\">
                          <WithStyles(ForwardRef(Typography)) variant=\\"caption\\" className=\\"DashboardComponent-noAccounts-6\\">
                            <ForwardRef(Typography) classes={{...}} variant=\\"caption\\" className=\\"DashboardComponent-noAccounts-6\\" theme={{...}}>
                              <span className=\\"MuiTypography-root DashboardComponent-noAccounts-6 MuiTypography-caption\\">
                                You don&#39;t have any accounts yet
                              </span>
                            </ForwardRef(Typography)>
                          </WithStyles(ForwardRef(Typography))>
                        </div>
                      </ForwardRef(Paper)>
                    </WithStyles(ForwardRef(Paper))>
                  </div>
                </ForwardRef(Grid)>
              </WithStyles(ForwardRef(Grid))>
            </div>
          </ForwardRef(Grid)>
        </WithStyles(ForwardRef(Grid))>
      </DashboardComponent>
    </WithStyles(DashboardComponent)>
  </Connect(WithStyles(DashboardComponent))>
</Provider>"
`;

exports[`Dashboard matches snapshot with one account 1`] = `
"<Provider store={{...}}>
  <Connect(WithStyles(DashboardComponent))>
    <WithStyles(DashboardComponent) settings={{...}} accounts={{...}} formatCurrency={[Function]} totalBalance={0} dispatch={[Function]}>
      <DashboardComponent classes={{...}} settings={{...}} accounts={{...}} formatCurrency={[Function]} totalBalance={0} dispatch={[Function]}>
        <WithStyles(ForwardRef(Grid)) container={true}>
          <ForwardRef(Grid) classes={{...}} container={true}>
            <div className=\\"MuiGrid-root MuiGrid-container\\">
              <WithStyles(ForwardRef(Grid)) container={true} justify=\\"flex-end\\" className={[undefined]}>
                <ForwardRef(Grid) classes={{...}} container={true} justify=\\"flex-end\\" className={[undefined]}>
                  <div className=\\"MuiGrid-root MuiGrid-container MuiGrid-justify-xs-flex-end\\">
                    <WithStyles(ForwardRef(Paper)) className=\\"DashboardComponent-balancePaper-1\\">
                      <ForwardRef(Paper) classes={{...}} className=\\"DashboardComponent-balancePaper-1\\">
                        <div className=\\"MuiPaper-root MuiPaper-elevation1 DashboardComponent-balancePaper-1 MuiPaper-rounded\\">
                          <WithStyles(ForwardRef(Typography)) variant=\\"body1\\" color=\\"textSecondary\\" align=\\"right\\">
                            <ForwardRef(Typography) classes={{...}} variant=\\"body1\\" color=\\"textSecondary\\" align=\\"right\\" theme={{...}}>
                              <p className=\\"MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-alignRight\\">
                                Balance
                              </p>
                            </ForwardRef(Typography)>
                          </WithStyles(ForwardRef(Typography))>
                          <WithStyles(ForwardRef(Typography)) variant=\\"h5\\" align=\\"right\\" className=\\"DashboardComponent-balanceAmount-2\\">
                            <ForwardRef(Typography) classes={{...}} variant=\\"h5\\" align=\\"right\\" className=\\"DashboardComponent-balanceAmount-2\\" theme={{...}}>
                              <h5 className=\\"MuiTypography-root DashboardComponent-balanceAmount-2 MuiTypography-h5 MuiTypography-alignRight\\">
                                $0.00
                              </h5>
                            </ForwardRef(Typography)>
                          </WithStyles(ForwardRef(Typography))>
                          <WithStyles(ForwardRef(Paper)) className=\\"DashboardComponent-balancePaperIcon-3\\">
                            <ForwardRef(Paper) classes={{...}} className=\\"DashboardComponent-balancePaperIcon-3\\">
                              <div className=\\"MuiPaper-root MuiPaper-elevation1 DashboardComponent-balancePaperIcon-3 MuiPaper-rounded\\">
                                <ForwardRef className=\\"DashboardComponent-balanceIcon-4\\">
                                  <WithStyles(ForwardRef(SvgIcon)) className=\\"DashboardComponent-balanceIcon-4\\">
                                    <ForwardRef(SvgIcon) classes={{...}} className=\\"DashboardComponent-balanceIcon-4\\">
                                      <svg className=\\"MuiSvgIcon-root DashboardComponent-balanceIcon-4\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden=\\"true\\" role=\\"presentation\\">
                                        <path d=\\"M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z\\" />
                                      </svg>
                                    </ForwardRef(SvgIcon)>
                                  </WithStyles(ForwardRef(SvgIcon))>
                                </ForwardRef>
                              </div>
                            </ForwardRef(Paper)>
                          </WithStyles(ForwardRef(Paper))>
                        </div>
                      </ForwardRef(Paper)>
                    </WithStyles(ForwardRef(Paper))>
                  </div>
                </ForwardRef(Grid)>
              </WithStyles(ForwardRef(Grid))>
              <WithStyles(ForwardRef(Grid)) container={true}>
                <ForwardRef(Grid) classes={{...}} container={true}>
                  <div className=\\"MuiGrid-root MuiGrid-container\\">
                    <WithStyles(ForwardRef(Paper)) className=\\"DashboardComponent-summaryPaper-5\\">
                      <ForwardRef(Paper) classes={{...}} className=\\"DashboardComponent-summaryPaper-5\\">
                        <div className=\\"MuiPaper-root MuiPaper-elevation1 DashboardComponent-summaryPaper-5 MuiPaper-rounded\\">
                          <WithStyles(ForwardRef(Table)) className={[undefined]}>
                            <ForwardRef(Table) classes={{...}} className={[undefined]}>
                              <table className=\\"MuiTable-root\\">
                                <WithStyles(ForwardRef(TableHead))>
                                  <ForwardRef(TableHead) classes={{...}}>
                                    <thead className=\\"MuiTableHead-root\\">
                                      <WithStyles(ForwardRef(TableRow))>
                                        <ForwardRef(TableRow) classes={{...}}>
                                          <tr className=\\"MuiTableRow-root MuiTableRow-head\\">
                                            <WithStyles(ForwardRef(TableCell))>
                                              <ForwardRef(TableCell) classes={{...}}>
                                                <th className=\\"MuiTableCell-root MuiTableCell-head\\" aria-sort={{...}} scope=\\"col\\" />
                                              </ForwardRef(TableCell)>
                                            </WithStyles(ForwardRef(TableCell))>
                                            <WithStyles(ForwardRef(TableCell)) align=\\"right\\">
                                              <ForwardRef(TableCell) classes={{...}} align=\\"right\\">
                                                <th className=\\"MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight\\" aria-sort={{...}} scope=\\"col\\">
                                                  USD
                                                </th>
                                              </ForwardRef(TableCell)>
                                            </WithStyles(ForwardRef(TableCell))>
                                          </tr>
                                        </ForwardRef(TableRow)>
                                      </WithStyles(ForwardRef(TableRow))>
                                    </thead>
                                  </ForwardRef(TableHead)>
                                </WithStyles(ForwardRef(TableHead))>
                                <WithStyles(ForwardRef(TableBody))>
                                  <ForwardRef(TableBody) classes={{...}}>
                                    <tbody className=\\"MuiTableBody-root\\">
                                      <WithStyles(ForwardRef(TableRow))>
                                        <ForwardRef(TableRow) classes={{...}}>
                                          <tr className=\\"MuiTableRow-root\\">
                                            <WithStyles(ForwardRef(TableCell))>
                                              <ForwardRef(TableCell) classes={{...}}>
                                                <td className=\\"MuiTableCell-root MuiTableCell-body\\" aria-sort={{...}} scope={[undefined]}>
                                                  <span className=\\"DashboardComponent-institutionWrapper-7\\">
                                                    <WithStyles(InstitutionIcon) institution=\\"TD\\" size=\\"small\\" className=\\"DashboardComponent-institutionIcon-8\\">
                                                      <InstitutionIcon classes={{...}} institution=\\"TD\\" size=\\"small\\" className=\\"DashboardComponent-institutionIcon-8\\">
                                                        <ForwardRef className=\\"InstitutionIcon-small-198 DashboardComponent-institutionIcon-8\\">
                                                          <WithStyles(ForwardRef(SvgIcon)) className=\\"InstitutionIcon-small-198 DashboardComponent-institutionIcon-8\\">
                                                            <ForwardRef(SvgIcon) classes={{...}} className=\\"InstitutionIcon-small-198 DashboardComponent-institutionIcon-8\\">
                                                              <svg className=\\"MuiSvgIcon-root InstitutionIcon-small-198 DashboardComponent-institutionIcon-8\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden=\\"true\\" role=\\"presentation\\">
                                                                <path d=\\"M4 10v7h3v-7H4zm6 0v7h3v-7h-3zM2 22h19v-3H2v3zm14-12v7h3v-7h-3zm-4.5-9L2 6v2h19V6l-9.5-5z\\" />
                                                              </svg>
                                                            </ForwardRef(SvgIcon)>
                                                          </WithStyles(ForwardRef(SvgIcon))>
                                                        </ForwardRef>
                                                      </InstitutionIcon>
                                                    </WithStyles(InstitutionIcon)>
                                                    <WithStyles(ForwardRef(Typography)) variant=\\"subtitle2\\">
                                                      <ForwardRef(Typography) classes={{...}} variant=\\"subtitle2\\" theme={{...}}>
                                                        <h6 className=\\"MuiTypography-root MuiTypography-subtitle2\\">
                                                          TD
                                                        </h6>
                                                      </ForwardRef(Typography)>
                                                    </WithStyles(ForwardRef(Typography))>
                                                  </span>
                                                </td>
                                              </ForwardRef(TableCell)>
                                            </WithStyles(ForwardRef(TableCell))>
                                            <WithStyles(ForwardRef(TableCell)) align=\\"right\\">
                                              <ForwardRef(TableCell) classes={{...}} align=\\"right\\">
                                                <td className=\\"MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight\\" aria-sort={{...}} scope={[undefined]}>
                                                  <WithStyles(ForwardRef(Typography)) variant=\\"subtitle2\\">
                                                    <ForwardRef(Typography) classes={{...}} variant=\\"subtitle2\\" theme={{...}}>
                                                      <h6 className=\\"MuiTypography-root MuiTypography-subtitle2\\">
                                                        $0.00
                                                      </h6>
                                                    </ForwardRef(Typography)>
                                                  </WithStyles(ForwardRef(Typography))>
                                                </td>
                                              </ForwardRef(TableCell)>
                                            </WithStyles(ForwardRef(TableCell))>
                                          </tr>
                                        </ForwardRef(TableRow)>
                                      </WithStyles(ForwardRef(TableRow))>
                                      <WithStyles(ForwardRef(TableRow))>
                                        <ForwardRef(TableRow) classes={{...}}>
                                          <tr className=\\"MuiTableRow-root\\">
                                            <WithStyles(ForwardRef(TableCell))>
                                              <ForwardRef(TableCell) classes={{...}}>
                                                <td className=\\"MuiTableCell-root MuiTableCell-body\\" aria-sort={{...}} scope={[undefined]}>
                                                  <WithStyles(ForwardRef(Typography)) className=\\"DashboardComponent-accountName-9\\">
                                                    <ForwardRef(Typography) classes={{...}} className=\\"DashboardComponent-accountName-9\\" theme={{...}}>
                                                      <p className=\\"MuiTypography-root DashboardComponent-accountName-9 MuiTypography-body1\\" />
                                                    </ForwardRef(Typography)>
                                                  </WithStyles(ForwardRef(Typography))>
                                                </td>
                                              </ForwardRef(TableCell)>
                                            </WithStyles(ForwardRef(TableCell))>
                                            <WithStyles(ForwardRef(TableCell)) align=\\"right\\">
                                              <ForwardRef(TableCell) classes={{...}} align=\\"right\\">
                                                <td className=\\"MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight\\" aria-sort={{...}} scope={[undefined]}>
                                                  $0.00
                                                </td>
                                              </ForwardRef(TableCell)>
                                            </WithStyles(ForwardRef(TableCell))>
                                          </tr>
                                        </ForwardRef(TableRow)>
                                      </WithStyles(ForwardRef(TableRow))>
                                    </tbody>
                                  </ForwardRef(TableBody)>
                                </WithStyles(ForwardRef(TableBody))>
                              </table>
                            </ForwardRef(Table)>
                          </WithStyles(ForwardRef(Table))>
                        </div>
                      </ForwardRef(Paper)>
                    </WithStyles(ForwardRef(Paper))>
                  </div>
                </ForwardRef(Grid)>
              </WithStyles(ForwardRef(Grid))>
            </div>
          </ForwardRef(Grid)>
        </WithStyles(ForwardRef(Grid))>
      </DashboardComponent>
    </WithStyles(DashboardComponent)>
  </Connect(WithStyles(DashboardComponent))>
</Provider>"
`;

exports[`Dashboard matches snapshot with two accounts in a different currency 1`] = `
"<Provider store={{...}}>
  <Connect(WithStyles(DashboardComponent))>
    <WithStyles(DashboardComponent) settings={{...}} accounts={{...}} formatCurrency={[Function]} totalBalance={10} dispatch={[Function]}>
      <DashboardComponent classes={{...}} settings={{...}} accounts={{...}} formatCurrency={[Function]} totalBalance={10} dispatch={[Function]}>
        <WithStyles(ForwardRef(Grid)) container={true}>
          <ForwardRef(Grid) classes={{...}} container={true}>
            <div className=\\"MuiGrid-root MuiGrid-container\\">
              <WithStyles(ForwardRef(Grid)) container={true} justify=\\"flex-end\\" className={[undefined]}>
                <ForwardRef(Grid) classes={{...}} container={true} justify=\\"flex-end\\" className={[undefined]}>
                  <div className=\\"MuiGrid-root MuiGrid-container MuiGrid-justify-xs-flex-end\\">
                    <WithStyles(ForwardRef(Paper)) className=\\"DashboardComponent-balancePaper-1\\">
                      <ForwardRef(Paper) classes={{...}} className=\\"DashboardComponent-balancePaper-1\\">
                        <div className=\\"MuiPaper-root MuiPaper-elevation1 DashboardComponent-balancePaper-1 MuiPaper-rounded\\">
                          <WithStyles(ForwardRef(Typography)) variant=\\"body1\\" color=\\"textSecondary\\" align=\\"right\\">
                            <ForwardRef(Typography) classes={{...}} variant=\\"body1\\" color=\\"textSecondary\\" align=\\"right\\" theme={{...}}>
                              <p className=\\"MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-alignRight\\">
                                Balance
                              </p>
                            </ForwardRef(Typography)>
                          </WithStyles(ForwardRef(Typography))>
                          <WithStyles(ForwardRef(Typography)) variant=\\"h5\\" align=\\"right\\" className=\\"DashboardComponent-balanceAmount-2\\">
                            <ForwardRef(Typography) classes={{...}} variant=\\"h5\\" align=\\"right\\" className=\\"DashboardComponent-balanceAmount-2\\" theme={{...}}>
                              <h5 className=\\"MuiTypography-root DashboardComponent-balanceAmount-2 MuiTypography-h5 MuiTypography-alignRight\\">
                                €10.00
                              </h5>
                            </ForwardRef(Typography)>
                          </WithStyles(ForwardRef(Typography))>
                          <WithStyles(ForwardRef(Paper)) className=\\"DashboardComponent-balancePaperIcon-3\\">
                            <ForwardRef(Paper) classes={{...}} className=\\"DashboardComponent-balancePaperIcon-3\\">
                              <div className=\\"MuiPaper-root MuiPaper-elevation1 DashboardComponent-balancePaperIcon-3 MuiPaper-rounded\\">
                                <ForwardRef className=\\"DashboardComponent-balanceIcon-4\\">
                                  <WithStyles(ForwardRef(SvgIcon)) className=\\"DashboardComponent-balanceIcon-4\\">
                                    <ForwardRef(SvgIcon) classes={{...}} className=\\"DashboardComponent-balanceIcon-4\\">
                                      <svg className=\\"MuiSvgIcon-root DashboardComponent-balanceIcon-4\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden=\\"true\\" role=\\"presentation\\">
                                        <path d=\\"M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z\\" />
                                      </svg>
                                    </ForwardRef(SvgIcon)>
                                  </WithStyles(ForwardRef(SvgIcon))>
                                </ForwardRef>
                              </div>
                            </ForwardRef(Paper)>
                          </WithStyles(ForwardRef(Paper))>
                        </div>
                      </ForwardRef(Paper)>
                    </WithStyles(ForwardRef(Paper))>
                  </div>
                </ForwardRef(Grid)>
              </WithStyles(ForwardRef(Grid))>
              <WithStyles(ForwardRef(Grid)) container={true}>
                <ForwardRef(Grid) classes={{...}} container={true}>
                  <div className=\\"MuiGrid-root MuiGrid-container\\">
                    <WithStyles(ForwardRef(Paper)) className=\\"DashboardComponent-summaryPaper-5\\">
                      <ForwardRef(Paper) classes={{...}} className=\\"DashboardComponent-summaryPaper-5\\">
                        <div className=\\"MuiPaper-root MuiPaper-elevation1 DashboardComponent-summaryPaper-5 MuiPaper-rounded\\">
                          <WithStyles(ForwardRef(Table)) className={[undefined]}>
                            <ForwardRef(Table) classes={{...}} className={[undefined]}>
                              <table className=\\"MuiTable-root\\">
                                <WithStyles(ForwardRef(TableHead))>
                                  <ForwardRef(TableHead) classes={{...}}>
                                    <thead className=\\"MuiTableHead-root\\">
                                      <WithStyles(ForwardRef(TableRow))>
                                        <ForwardRef(TableRow) classes={{...}}>
                                          <tr className=\\"MuiTableRow-root MuiTableRow-head\\">
                                            <WithStyles(ForwardRef(TableCell))>
                                              <ForwardRef(TableCell) classes={{...}}>
                                                <th className=\\"MuiTableCell-root MuiTableCell-head\\" aria-sort={{...}} scope=\\"col\\" />
                                              </ForwardRef(TableCell)>
                                            </WithStyles(ForwardRef(TableCell))>
                                            <WithStyles(ForwardRef(TableCell)) align=\\"right\\">
                                              <ForwardRef(TableCell) classes={{...}} align=\\"right\\">
                                                <th className=\\"MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight\\" aria-sort={{...}} scope=\\"col\\">
                                                  EUR
                                                </th>
                                              </ForwardRef(TableCell)>
                                            </WithStyles(ForwardRef(TableCell))>
                                          </tr>
                                        </ForwardRef(TableRow)>
                                      </WithStyles(ForwardRef(TableRow))>
                                    </thead>
                                  </ForwardRef(TableHead)>
                                </WithStyles(ForwardRef(TableHead))>
                                <WithStyles(ForwardRef(TableBody))>
                                  <ForwardRef(TableBody) classes={{...}}>
                                    <tbody className=\\"MuiTableBody-root\\">
                                      <WithStyles(ForwardRef(TableRow))>
                                        <ForwardRef(TableRow) classes={{...}}>
                                          <tr className=\\"MuiTableRow-root\\">
                                            <WithStyles(ForwardRef(TableCell))>
                                              <ForwardRef(TableCell) classes={{...}}>
                                                <td className=\\"MuiTableCell-root MuiTableCell-body\\" aria-sort={{...}} scope={[undefined]}>
                                                  <span className=\\"DashboardComponent-institutionWrapper-7\\">
                                                    <WithStyles(InstitutionIcon) institution=\\"TD\\" size=\\"small\\" className=\\"DashboardComponent-institutionIcon-8\\">
                                                      <InstitutionIcon classes={{...}} institution=\\"TD\\" size=\\"small\\" className=\\"DashboardComponent-institutionIcon-8\\">
                                                        <ForwardRef className=\\"InstitutionIcon-small-198 DashboardComponent-institutionIcon-8\\">
                                                          <WithStyles(ForwardRef(SvgIcon)) className=\\"InstitutionIcon-small-198 DashboardComponent-institutionIcon-8\\">
                                                            <ForwardRef(SvgIcon) classes={{...}} className=\\"InstitutionIcon-small-198 DashboardComponent-institutionIcon-8\\">
                                                              <svg className=\\"MuiSvgIcon-root InstitutionIcon-small-198 DashboardComponent-institutionIcon-8\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden=\\"true\\" role=\\"presentation\\">
                                                                <path d=\\"M4 10v7h3v-7H4zm6 0v7h3v-7h-3zM2 22h19v-3H2v3zm14-12v7h3v-7h-3zm-4.5-9L2 6v2h19V6l-9.5-5z\\" />
                                                              </svg>
                                                            </ForwardRef(SvgIcon)>
                                                          </WithStyles(ForwardRef(SvgIcon))>
                                                        </ForwardRef>
                                                      </InstitutionIcon>
                                                    </WithStyles(InstitutionIcon)>
                                                    <WithStyles(ForwardRef(Typography)) variant=\\"subtitle2\\">
                                                      <ForwardRef(Typography) classes={{...}} variant=\\"subtitle2\\" theme={{...}}>
                                                        <h6 className=\\"MuiTypography-root MuiTypography-subtitle2\\">
                                                          TD
                                                        </h6>
                                                      </ForwardRef(Typography)>
                                                    </WithStyles(ForwardRef(Typography))>
                                                  </span>
                                                </td>
                                              </ForwardRef(TableCell)>
                                            </WithStyles(ForwardRef(TableCell))>
                                            <WithStyles(ForwardRef(TableCell)) align=\\"right\\">
                                              <ForwardRef(TableCell) classes={{...}} align=\\"right\\">
                                                <td className=\\"MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight\\" aria-sort={{...}} scope={[undefined]}>
                                                  <WithStyles(ForwardRef(Typography)) variant=\\"subtitle2\\">
                                                    <ForwardRef(Typography) classes={{...}} variant=\\"subtitle2\\" theme={{...}}>
                                                      <h6 className=\\"MuiTypography-root MuiTypography-subtitle2\\">
                                                        €10.00
                                                      </h6>
                                                    </ForwardRef(Typography)>
                                                  </WithStyles(ForwardRef(Typography))>
                                                </td>
                                              </ForwardRef(TableCell)>
                                            </WithStyles(ForwardRef(TableCell))>
                                          </tr>
                                        </ForwardRef(TableRow)>
                                      </WithStyles(ForwardRef(TableRow))>
                                      <WithStyles(ForwardRef(TableRow))>
                                        <ForwardRef(TableRow) classes={{...}}>
                                          <tr className=\\"MuiTableRow-root\\">
                                            <WithStyles(ForwardRef(TableCell))>
                                              <ForwardRef(TableCell) classes={{...}}>
                                                <td className=\\"MuiTableCell-root MuiTableCell-body\\" aria-sort={{...}} scope={[undefined]}>
                                                  <WithStyles(ForwardRef(Typography)) className=\\"DashboardComponent-accountName-9\\">
                                                    <ForwardRef(Typography) classes={{...}} className=\\"DashboardComponent-accountName-9\\" theme={{...}}>
                                                      <p className=\\"MuiTypography-root DashboardComponent-accountName-9 MuiTypography-body1\\" />
                                                    </ForwardRef(Typography)>
                                                  </WithStyles(ForwardRef(Typography))>
                                                </td>
                                              </ForwardRef(TableCell)>
                                            </WithStyles(ForwardRef(TableCell))>
                                            <WithStyles(ForwardRef(TableCell)) align=\\"right\\">
                                              <ForwardRef(TableCell) classes={{...}} align=\\"right\\">
                                                <td className=\\"MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight\\" aria-sort={{...}} scope={[undefined]}>
                                                  €0.00
                                                </td>
                                              </ForwardRef(TableCell)>
                                            </WithStyles(ForwardRef(TableCell))>
                                          </tr>
                                        </ForwardRef(TableRow)>
                                      </WithStyles(ForwardRef(TableRow))>
                                      <WithStyles(ForwardRef(TableRow))>
                                        <ForwardRef(TableRow) classes={{...}}>
                                          <tr className=\\"MuiTableRow-root\\">
                                            <WithStyles(ForwardRef(TableCell))>
                                              <ForwardRef(TableCell) classes={{...}}>
                                                <td className=\\"MuiTableCell-root MuiTableCell-body\\" aria-sort={{...}} scope={[undefined]}>
                                                  <WithStyles(ForwardRef(Typography)) className=\\"DashboardComponent-accountName-9\\">
                                                    <ForwardRef(Typography) classes={{...}} className=\\"DashboardComponent-accountName-9\\" theme={{...}}>
                                                      <p className=\\"MuiTypography-root DashboardComponent-accountName-9 MuiTypography-body1\\" />
                                                    </ForwardRef(Typography)>
                                                  </WithStyles(ForwardRef(Typography))>
                                                </td>
                                              </ForwardRef(TableCell)>
                                            </WithStyles(ForwardRef(TableCell))>
                                            <WithStyles(ForwardRef(TableCell)) align=\\"right\\">
                                              <ForwardRef(TableCell) classes={{...}} align=\\"right\\">
                                                <td className=\\"MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight\\" aria-sort={{...}} scope={[undefined]}>
                                                  €10.00
                                                </td>
                                              </ForwardRef(TableCell)>
                                            </WithStyles(ForwardRef(TableCell))>
                                          </tr>
                                        </ForwardRef(TableRow)>
                                      </WithStyles(ForwardRef(TableRow))>
                                    </tbody>
                                  </ForwardRef(TableBody)>
                                </WithStyles(ForwardRef(TableBody))>
                              </table>
                            </ForwardRef(Table)>
                          </WithStyles(ForwardRef(Table))>
                        </div>
                      </ForwardRef(Paper)>
                    </WithStyles(ForwardRef(Paper))>
                  </div>
                </ForwardRef(Grid)>
              </WithStyles(ForwardRef(Grid))>
            </div>
          </ForwardRef(Grid)>
        </WithStyles(ForwardRef(Grid))>
      </DashboardComponent>
    </WithStyles(DashboardComponent)>
  </Connect(WithStyles(DashboardComponent))>
</Provider>"
`;
